--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
 			<artifactId>spring-boot</artifactId>
 			<version>2.1.2.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-batch</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
